--- a/project.html
+++ b/project.html
@@ -144,7 +144,8 @@
         <div class="tags">
          <span>HTml</span> <span>PHP</span><span>MySQL</span><span>CSS</span><span>Tailwind</span><span>JavaScript</span><span>AI</span>
         </div>
-        <p>A comprehensive management system designed for bakeries and pastry shops to streamline daily operations. The system allows users to generate receipts for customer purchases, manage and track inventory of ingredients and finished products, and handle order tracking efficiently. It supports multiple user roles, including chefs who can update and manage recipes and inventory, and managers who can oversee sales, stock levels, and orders. This system ensures smooth workflow, minimizes errors in order processing, and helps maintain optimal inventory levels, making bakery operations more organized and efficient....</p>
+        <p>The Freight Management System Financials with Forecasting, Real-Time Alerts, and Automated Budget Allocation using ChatGPT and TensorFlow is a project designed to modernize freight management, focusing on the financial subsystem. It is an AI-powered tool to serve the freight and logistics industry that continues to face difficult challenges in financial operations, unpredictable costs, and the need for smarter budgeting. TensorFlow is used to develop forecasting models that review past data to estimate prices, revenues, and demand, while ChatGPT enables a friendly conversational interface that simplifies and makes accessible complex financial information.
+....</p>
         <button class="see-more-btn">See More</button>
         <a href="http://finance.slatefreight-ph.com/pages/auth/login.php" class="view-project-btn">View Live Project</a>
       </div>
