--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
-    <header class="main-hedeaer">
+<header class="main-hedeaer">
         <div class="logo-area">
             <img src="asset/img/image__2_-removebg-preview.png" alt="Logo" class="logo-img">
             <div class="logo-text">
@@ -19,45 +19,76 @@
             </div>
         </div>
 
-         <nav class="main-nav-links">
-            <a href="index.html" class="nav-items">Home</a>
-            <a href="#About" class="nav-items">About</a>
-            <a href="project.html" class="nav-items">Projects</a>
-
+        <nav class="main-nav-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="project.html">Projects</a>
         </nav>
-        <div class="contact-area">
-            <button class="contact-btn">
-                <span>Contact</span>
-                <i class="fa-solid fa-phone"></i>
-            </button>
-        </div>
+
+        <button class="contact-btn">
+            <span>Contact</span>
+            <i class="fa-solid fa-phone"></i>
+        </button>
     </header>
 
+    <!-- HERO MAIN CONTENT -->
     <main class="hero-section-light">
         <div class="hero-content-light">
             <p class="greeting-light">Hey,</p>
-            <h1>I'm James Aries Concepcion</h1>
-            <h2 class="tagline-light">Evolving Developer | Passionate about crafting efficient solution.</h2>
+            <h1>I'm James Aries<br>Concepcion</h1>
+            <p class="tagline-light">Evolving Developer | Passionate about crafting efficient solution.</p>
 
             <div class="social-media-light">
                 <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" aria-label="Github" ><i class="fa-brands fa-github"></i></a>
-                <a href="#" aria-label="Telegram"><i class="fa-brands fa-telegram"></i>
-                </a>
+                <a href="#" aria-label="Github"><i class="fa-brands fa-github"></i></a>
+                <a href="#" aria-label="Telegram"><i class="fa-brands fa-telegram"></i></a>
             </div>
         </div>
 
         <div class="hero-image-light">
-            <img src="asset/img/360_F_545894172_fLINXPGJs19SgFvA3P6vTvXN59iScZJ0-removebg-preview.png" alt="Picture">
-
+            <img src="asset/img/360_F_545894172_fLINXPGJs19SgFvA3P6vTvXN59iScZJ0-removebg-preview.png" alt="James Aries Concepcion">
         </div>
-<div class="boxes">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-    </div>
+
+        <div class="boxes">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        
     </main>
-    
+ <footer>
+        <div class="footer-content">
+            <div class="footer-about">
+                <h3>James Aries Concepcion</h3>
+                <p>Aspiring Full-Stack Developer passionate about creating meaningful web experiences.</p>
+            </div>
+
+            <div class="footer-column contact-info">
+                <h4>Contact Info</h4>
+                <ul>
+                    <li><i class="fa-solid fa-envelope"></i> jamesconcepcion122@gmail.com</li>
+                    <li><i class="fa-solid fa-phone"></i> +63 912 623 8701</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Quezon City, Philippines</li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="copyright">
+            © 2025 James Aries Concepcion. All rights reserved.
+        </div>
+    </footer>
+  
+   
+
 </body>
 </html>
