--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
 
         <nav class="main-nav-links">
             <a href="index.html" class="nav-items">Home</a>
-            <a href="#About" class="nav-items">About</a>
+            <a href="about.html" class="nav-items">About</a>
             <a href="project.html" class="nav-items">Projects</a>
 
         </nav>
@@ -145,9 +145,55 @@
          <span>HTml</span> <span>PHP</span><span>MySQL</span><span>CSS</span><span>Tailwind</span><span>JavaScript</span><span>AI</span>
         </div>
         <p>The Freight Management System Financials with Forecasting, Real-Time Alerts, and Automated Budget Allocation using ChatGPT and TensorFlow is a project designed to modernize freight management, focusing on the financial subsystem. It is an AI-powered tool to serve the freight and logistics industry that continues to face difficult challenges in financial operations, unpredictable costs, and the need for smarter budgeting. TensorFlow is used to develop forecasting models that review past data to estimate prices, revenues, and demand, while ChatGPT enables a friendly conversational interface that simplifies and makes accessible complex financial information.
-....</p>
+    ....</p>
         <button class="see-more-btn">See More</button>
         <a href="http://finance.slatefreight-ph.com/pages/auth/login.php" class="view-project-btn">View Live Project</a>
+      </div>
+    </div>
+
+   <div class="card">
+        <div class="slider" data-slider>
+            <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181119.png" alt="Student Information System Screenshot 1">
+            </div>
+            <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181130.png" alt="Student Information System Screenshot 2">
+            </div>
+            <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181142.png" alt="Student Information System Screenshot 3">
+            </div>
+            <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181156.png" alt="Student Information System Screenshot 4" srcset="">
+            </div>
+               <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181212.png" alt="Student Information System Screenshot 5" srcset="">
+            </div>
+               <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181212.png" alt="Student Information System Screenshot 6" srcset="">
+            </div>
+              <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181224.png" alt="Student Information System Screenshot 7" srcset="">
+            </div>
+             <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181245.png" alt="Student Information System Screenshot 6" srcset="">
+            </div>
+              <div class="slides">
+                <img src="asset/img/Screenshot 2025-12-07 181320.png" alt="Student Information System Screenshot 7" srcset="">
+            </div>
+           
+            <div class="nav-prev">&#10094;</div>
+            <div class="nav-next">&#10095;</div>
+            <div class="dots"></div>
+        </div>
+       <div class="content">
+        <h2>WareSync inventory System</h2>
+        <div class="tags">
+         <span>HTml</span><span>CSS</span><span>JavaScript</span>
+        </div>
+        <p>WareSync is a warehouse management and inventory synchronization system designed to help businesses efficiently track stock, manage storage locations, and monitor product movement in real time. The system automates inventory updates, minimizes stock discrepancies, and keeps all warehouse data synchronized across departments.
+    ....</p>
+        <button class="see-more-btn">See More</button>
+        <a href="https://jamesariess.github.io/inventoryUI/" class="view-project-btn">View Live Project</a>
       </div>
     </div>
 
@@ -158,6 +204,38 @@
         <div class="box"></div>
     </div>
     </main>
+        <!-- Footer - exactly like your screenshot -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-about">
+                <h3>James Aries Concepcion</h3>
+                <p>Aspiring Full-Stack Developer passionate about creating meaningful web experiences.</p>
+            </div>
+
+            <div class="footer-column contact-info">
+                <h4>Contact Info</h4>
+                <ul>
+                    <li><i class="fa-solid fa-envelope"></i> jamesconcepcion122@gmail.com</li>
+                    <li><i class="fa-solid fa-phone"></i> +63 912 623 8701</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Quezon City, Philippines</li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                  
+                </ul>
+            </div>
+        </div>
+
+        <div class="copyright">
+            © 2025 James Aries Concepcion. All rights reserved.
+        </div>
+    </footer>
   <script>
 document.querySelectorAll("[data-slider]").forEach(slider => {
     let index = 0;
