--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 
         <section class="about-clean">
             <div class="about-photo">
-                <img src="asset/img/your-photo.jpg" alt="James Aries Concepcion"> <!-- replace with your actual photo -->
+                <img src="asset/img/Untitled Project - 2025-10-21T161212.021.jpg" alt="James Aries Concepcion"> <!-- replace with your actual photo -->
             </div>
 
             <div class="about-text">
@@ -90,8 +90,8 @@
                         <i class="fa-solid fa-paintbrush"></i>
                         <span>UI/UX Design</span>
                     </div>
-                    <div class="progress-bar"><div class="progress" style="width:75%;"></div></div>
-                    <div class="percentage">75%</div>
+                    <div class="progress-bar"><div class="progress" style="width:50%;"></div></div>
+                    <div class="percentage">50%</div>
                 </div>
 
                 <div class="skill-card">
@@ -115,10 +115,28 @@
                 <div class="skill-card">
                     <div class="skill-header">
                         <i class="fa-brands fa-js"></i>
-                        <span>JavaScript/React</span>
+                        <span>JavaScript</span>
                     </div>
-                    <div class="progress-bar"><div class="progress" style="width:68%;"></div></div>
-                    <div class="percentage">68%</div>
+                    <div class="progress-bar"><div class="progress" style="width:45%;"></div></div>
+                    <div class="percentage">45%</div>
+                </div>
+
+                     <div class="skill-card">
+                    <div class="skill-header">
+                        <i class="fa-solid fa-computer"></i>
+                        <span>Software Troubleshooting</span>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width:60%;"></div></div>
+                    <div class="percentage">60%</div>
+                </div>
+
+                    <div class="skill-card">
+                    <div class="skill-header">
+                        <i class="fa-solid fa-screwdriver-wrench"></i>
+                        <span>Hardware Troubleshooting</span>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width:78%;"></div></div>
+                    <div class="percentage">78%</div>
                 </div>
             </div>
         </section>
