--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="hero-image-light">
-            <img src="asset/img/360_F_545894172_fLINXPGJs19SgFvA3P6vTvXN59iScZJ0-removebg-preview.png" alt="James Aries Concepcion">
+            <img src="asset/img/434251350_122103707684257373_2355151174334162069_n.jpg" alt="James Aries Concepcion">
         </div>
 
         <div class="boxes">
