--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <p class="tagline-light">Evolving Developer | Passionate about crafting efficient solution.</p>
 
             <div class="social-media-light">
-                <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/aries.750964" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" aria-label="Github"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/jamesariess" aria-label="Github"><i class="fa-brands fa-github"></i></a>
                 <a href="#" aria-label="Telegram"><i class="fa-brands fa-telegram"></i></a>
             </div>
         </div>
