--- a/project.html
+++ b/project.html
@@ -105,7 +105,7 @@
         <div class="tags">
          <span>HTml</span> <span>PHP</span><span>MySQL</span><span>CSS</span><span>JavaScript</span>
         </div>
-        <p>A full-featured school management system with role-based access, grading, attendance, reports, and real-time announcements...</p>
+        <p>A full-featured school management system with role-based access, attendance, reports, and real-time announcements...</p>
         <button class="see-more-btn">See More</button>
         <a href="https://sisautomatedsystem.42web.io/StudentInformation/login.php" class="view-project-btn">View Live Project</a>
       </div>
